--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Jawed's Personal Site</title>
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
